tests/errors/frontend/already_defined.fpcore
(FPCore foo (x)
 (+ x x))

(FPCore foo (y)
 (* 2 y))
